--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 	},
 	"dependencies": {
 		"bootstrap": "^5.3.7",
+		"bootstrap-icons": "^1.13.1",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.10.10",
