--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
 	"dependencies": {
 		"bootstrap": "^5.3.7",
 		"bootstrap-icons": "^1.13.1",
+		"icons": "^1.0.0",
 		"prop-types": "^15.8.1",
-		"react": "^18.2.0",
+		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.10",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.5.0",
 		"react-router-dom": "^6.18.0"
 	}
 }
