--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	"dependencies": {
 		"bootstrap": "^5.3.7",
 		"bootstrap-icons": "^1.13.1",
+		"cors": "^2.8.5",
 		"icons": "^1.0.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
