--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,6 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 flask-swagger = "*"
@@ -22,6 +21,8 @@ wtforms = "==3.1.2"
 sqlalchemy = "*"
 bcrypt = "*"
 flask-mail = "*"
+flask = "*"
+mail = "*"
 
 [requires]
 python_version = "3.13"
