--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		]
 	},
 	"dependencies": {
+		"@vis.gl/react-google-maps": "^1.5.5",
 		"bootstrap": "^5.3.7",
 		"bootstrap-icons": "^1.13.1",
 		"cors": "^2.8.5",
