--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
 		]
 	},
 	"dependencies": {
+		"@googlemaps/extended-component-library": "^0.6.14",
+		"@googlemaps/react-wrapper": "^1.2.0",
 		"@vis.gl/react-google-maps": "^1.5.5",
 		"bootstrap": "^5.3.7",
 		"bootstrap-icons": "^1.13.1",
@@ -65,6 +67,7 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.5.0",
 		"react-loading-skeleton": "^3.5.0",
-		"react-router-dom": "^6.18.0"
+		"react-router-dom": "^6.18.0",
+		"use-places-autocomplete": "^4.0.1"
 	}
 }
