--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.10",
+		"react-datepicker": "^8.7.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.5.0",
 		"react-loading-skeleton": "^3.5.0",
