--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"eslint-plugin-react": "^7.33.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
-		"vite": "^7.1.2"
+		"vite": "^4.4.8"
 	},
 	"babel": {
 		"presets": [
@@ -54,10 +54,6 @@
 		]
 	},
 	"dependencies": {
-		"@googlemaps/extended-component-library": "^0.6.14",
-		"@googlemaps/react-wrapper": "^1.2.0",
-		"@reach/combobox": "^0.18.0",
-		"@react-google-maps/api": "^2.20.7",
 		"@vis.gl/react-google-maps": "^1.5.5",
 		"bootstrap": "^5.3.7",
 		"bootstrap-icons": "^1.13.1",
@@ -70,7 +66,6 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.5.0",
 		"react-loading-skeleton": "^3.5.0",
-		"react-router-dom": "^6.18.0",
-		"use-places-autocomplete": "^4.0.1"
+		"react-router-dom": "^6.18.0"
 	}
 }
